Refactor the relevance comparator logic, add enums for sortField and sortOrder, include a footer on both PDP and PLP pages.